# ZeroStudio

./: README.md  build.gradle.kts  crowdin-contributors.json  gradle.properties  package-lock.json  package.json  settings.gradle.kts  translate_android.py
.github/workflows/: Resources-string-translation-i18n.yml  build-apk.yml
StringTranslation/values/: strings.xml  strings_git.xml
StringTranslation/values-ar-rSA/: dev_test_res.xml  strings.xml  strings_git.xml
StringTranslation/values-bn-rIN/: dev_test_res.xml  strings.xml  strings_git.xml
StringTranslation/values-de-rDE/: dev_test_res.xml  strings.xml  strings_git.xml
StringTranslation/values-es-rES/: dev_test_res.xml  strings.xml  strings_git.xml
StringTranslation/values-fa/: dev_test_res.xml  strings.xml  strings_git.xml
StringTranslation/values-fil/: dev_test_res.xml  strings.xml  strings_git.xml
StringTranslation/values-fr-rFR/: dev_test_res.xml  strings.xml  strings_git.xml
StringTranslation/values-hi-rIN/: dev_test_res.xml  strings.xml
StringTranslation/values-in-rID/: dev_test_res.xml  strings.xml
StringTranslation/values-it/: dev_test_res.xml  strings.xml
StringTranslation/values-ja/: dev_test_res.xml  strings.xml
StringTranslation/values-ko/: dev_test_res.xml  strings.xml
StringTranslation/values-ml/: dev_test_res.xml  strings.xml
StringTranslation/values-pl/: dev_test_res.xml  strings.xml
StringTranslation/values-pt-rBR/: dev_test_res.xml  strings.xml
StringTranslation/values-ro-rRO/: dev_test_res.xml  strings.xml
StringTranslation/values-ru-rRU/: dev_test_res.xml  strings.xml
StringTranslation/values-ta/: dev_test_res.xml  strings.xml
StringTranslation/values-th/: dev_test_res.xml  strings.xml
StringTranslation/values-tm-rTM/: dev_test_res.xml  strings.xml
StringTranslation/values-tr-rTR/: dev_test_res.xml  strings.xml
StringTranslation/values-uk/: dev_test_res.xml  strings.xml
StringTranslation/values-vi/: dev_test_res.xml  strings.xml
StringTranslation/values-zh-rCN/: dev_test_res.xml  strings.xml
StringTranslation/values-zh-rTW/: dev_test_res.xml  strings.xml
composite-builds/: settings.gradle.kts
composite-builds/build-deps/: settings.gradle.kts
core/app/: build.gradle.kts  build_output.txt
core/chatai/: 减少token消耗方案.md
core/common/: demo.java
core/git/: build.gradle.kts
core/kotlin/: build.gradle.kts
core/layout-editor/: build.gradle.kts  谷歌官方布局编辑器
core/resources/: build.gradle.kts
docs/: pcak.sh
docs/AndroidSdkTool/: manifest.json
docs/Highlight_JSON_docs/: docs-cn.md  docs-en.md  generate_ast_scm.py  generate_highlight_json.py  generate_highlight_json2.py  generate_structured_scm.py
docs/TODO/: 传输协议  性能方案.txt
editor/impl/: build.gradle.kts
editor/tree-sitter-ndk/: PhpLanguage.kt  PythonLanguage.kt  SqliteLanguage.kt  common-config.cmake  docs.md
editor/tree-sitter-ndk/markdown/src/main/cpp/: CMakeLists.txt  tree-sitter-markdown.cpp  ts_markdown.h
editor/tree-sitter-ndk/php/src/main/cpp/: CMakeLists.txt  tree-sitter-php.cpp
editor/tree-sitter-ndk/reStructuredText/src/main/cpp/: CMakeLists.txt  tree-sitter-reStructuredText.cpp
gradle/: libs.versions.toml
java/lsp/: prop.js
modules/colorpicker/: build.gradle
modules/compose-preview/: build.gradle.kts
(+981 files in other folders)
